Added readonly attribute to input to make it non editable

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <h2>Password Generator</h2>
 
         <div class="output-box">
-            <input type="text" id="password"/>
+            <input type="text" id="password" readonly/>
             <button id="copyBtn">Copy</button>
         </div>
 
